update with 2017 info

--- a/index.html
+++ b/index.html
@@ -48,22 +48,17 @@
       <header class="major">
         <h2>Ultimate Frisbee Festival</h2>
       </header>
-      <p>Our primary goal with Bid For Peace is to put on a party that everyone will enjoy and at the same time, raise a bunch of money to give to Ultimate Peace. Here's an idea of what we've done in the past to accomplish this goal.</p>
+      <p>For 2017, your entrance fee gets you a reversible tank, food at the fields, a UP wristband, and the knowledge that you're supporting a great cause! The cost is $45 per person, and $40 for registrants 18 and under.</p>
       <div class="row 150%">
-        <div class="4u 12u$(medium)">
+        <div class="6u 12u$(medium)">
           <span class="image fit"><img src="images/tourney.png" alt="" /></span>
           <h3>Hat Tournament</h3>
-          <p>We've found that hosting a hat tournament is not only crazy fun, but it is also in the spirit of Ultimate Peace, which is all about creating new bonds of friendship and respect. Come meet some new people and see what you have to learn from each other.</p>
+          <p>This year's tournament will be held at <a href="https://goo.gl/maps/cHto4Z4f7cv">Luisiana Oaks Park</a> in St. Louis Park on Saturday July 29th, 2017 starting at 8:30 am. Register by Friday July 7th to guarantee your jersey size. Registration opens soon!</p>
         </div>
-        <div class="4u 12u$(medium)">
+        <div class="6u 12u$(medium)">
           <span class="image fit"><img src="images/band.png" alt="guitar shreds" /></span>
-          <h3>Entertainment</h3>
-          <p>We're not doing our jobs if you're not having an awesome time. We've hired bands, played spikeball and cornhole, and raffled everything from jerseys to burritos. It'll be an awesome day of fun and you'll probably go home with something.</p>
-        </div>
-        <div class="4u$ 12u$(medium)">
-          <span class="image fit"><img src="images/pull.png" alt="windchill pulls" /></span>
-          <h3>Showcase Games</h3>
-          <p>There are some incredible ultimate players in Minnesota and we like to showcase their skills in matchups that you won't see anywhere else. Whether it's pro vs. club, or an elite women's team against the ladies from the top mixed teams, the games are always exciting.</p>
+          <h3>After Party</h3>
+          <p>After the tournament, we'll make our way to <a href="https://goo.gl/maps/cHto4Z4f7cv">Park Tavern</a> where we'll celebrate together, hold a raffle, and have UP merchandise for sale.</p>
         </div>
       </div>
     </div>
@@ -136,7 +131,7 @@
       <li><a href="mailto:bidforpeace@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
     </ul>
     <ul class="copyright">
-      <li>&copy; Bid For Peace</li>
+      <li>Bid For Peace &copy; 2017</li>
       <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
     </ul>
   </section>
