--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
       <p>For 2017, your entrance fee gets you a reversible tank, food at the fields, a UP wristband, and the knowledge that you're supporting a great cause! The cost is $45 per person, and $40 for registrants 18 and under.</p>
       <div class="row 150%">
         <div class="6u 12u$(medium)">
-          <span class="image fit"><img src="images/tourney.png" alt="" /></span>
+          <span class="image fit"><img src="images/melissa.jpg" alt="" /></span>
           <h3>Hat Tournament</h3>
           <p>This year's tournament will be held at <a href="https://goo.gl/maps/cHto4Z4f7cv">Luisiana Oaks Park</a> in St. Louis Park on Saturday July 29th, 2017 starting at 8:30 am. Register by Friday July 7th to guarantee your jersey size. Registration opens soon!</p>
         </div>
         <div class="6u 12u$(medium)">
-          <span class="image fit"><img src="images/band.png" alt="guitar shreds" /></span>
+          <span class="image fit"><img src="images/hs.jpg" alt="" /></span>
           <h3>After Party</h3>
           <p>After the tournament, we'll make our way to <a href="https://goo.gl/maps/cHto4Z4f7cv">Park Tavern</a> where we'll celebrate together, hold a raffle, and have UP merchandise for sale.</p>
         </div>
