update with sarah's copy

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="inner">
       <img src="images/BidForPeaceLogo.svg" alt="bfp logo" />
       <h1><strong>Bid For Peace</strong></h1>
-      <p>an ultimate festival and fundraiser<br /> benefitting <a href="http://www.ultimatepeace.org/">Ultimate Peace</a>.</p>
+      <p>an ultimate festival and fundraiser<br /> benefitting <a href="http://www.ultimatepeace.org/">Ultimate Peace</a></p>
       <ul class="actions">
         <li><a href="#festival" class="button scrolly">Festival</a></li>
         <li><a href="#fundraiser" class="button scrolly">Fundraiser</a></li>
@@ -48,17 +48,22 @@
       <header class="major">
         <h2>Ultimate Frisbee Festival</h2>
       </header>
-      <p>For 2017, your entrance fee gets you a reversible tank, food at the fields, a UP wristband, and the knowledge that you're supporting a great cause! The cost is $45 per person, and $40 for registrants 18 and under.</p>
+      <p>Bid for Peace 2017 is here!</p>
       <div class="row 150%">
-        <div class="6u 12u$(medium)">
-          <span class="image fit"><img src="images/melissa.jpg" alt="" /></span>
+        <div class="4u 12u$(medium)">
+          <span class="image fit"><img src="images/melissa.jpg" alt="Melissa cathing a disc" /></span>
           <h3>Hat Tournament</h3>
-          <p>This year's tournament will be held at <a href="https://goo.gl/maps/cHto4Z4f7cv">Luisiana Oaks Park</a> in St. Louis Park on Saturday July 29th, 2017 starting at 8:30 am. Register by Friday July 7th to guarantee your jersey size. Registration opens soon!</p>
+          <p>This year's hat tournament will be at <a href="https://goo.gl/maps/cHto4Z4f7cv">Louisiana Oaks Park</a> in St. Louis Park on July 29th starting at 8:30am. There will also be a raffle, UP merchandise for sale, and free tournament food for participants at the fields.</p>
         </div>
-        <div class="6u 12u$(medium)">
-          <span class="image fit"><img src="images/hs.jpg" alt="" /></span>
+        <div class="4u 12u$(medium)">
+          <span class="image fit"><img src="images/hs.jpg" alt="high school kids smiling" /></span>
           <h3>After Party</h3>
-          <p>After the tournament, we'll make our way to <a href="https://goo.gl/maps/cHto4Z4f7cv">Park Tavern</a> where we'll celebrate together, hold a raffle, and have UP merchandise for sale.</p>
+          <p>Join us after the tournament at the <a href="https://goo.gl/maps/cHto4Z4f7cv">Park Tavern</a> to celebrate in the spirit of Ultimate Peace. Meet new people, create new bonds of friendship and respect and see what you have to learn from your peers.</p>
+        </div>
+        <div class="4u 12u$(medium)">
+          <span class="image fit"><img src="images/highfives.jpg" alt="two teams high fiving after the game"/></span>
+          <h3>Details</h3>
+          <p>The cost is $45 per person, or $40 for registrants 18 and under. Entrance fee includes 4 games, a reversible tank, a UP wristband, and the knowledge that you are supporting a great cause!</p>
         </div>
       </div>
     </div>
