try fixing links again

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
         <div class="4u 12u$(medium)">
           <span class="image fit"><img src="images/melissa.jpg" alt="Melissa cathing a disc" /></span>
           <h3>Hat Tournament</h3>
-          <p>This year's hat tournament will be at <a href="https://www.google.com/maps/place/Louisiana+Oaks+Park/@44.94157,-93.3735346,15z/data=!4m5!3m4!1s0x0:0x806190826b3a5cd2!8m2!3d44.94157!4d-93.3735346">Louisiana Oaks Park</a> in St. Louis Park on July 29th starting at 8:30am. There will also be a raffle, UP merchandise for sale, and free tournament food for participants at the fields.</p>
+          <p>This year's hat tournament will be at <a target="_self" href="https://www.google.com/maps/place/Louisiana+Oaks+Park/@44.94157,-93.3735346,15z/data=!4m5!3m4!1s0x0:0x806190826b3a5cd2!8m2!3d44.94157!4d-93.3735346">Louisiana Oaks Park</a> in St. Louis Park on July 29th starting at 8:30am. There will also be a raffle, UP merchandise for sale, and free tournament food for participants at the fields.</p>
         </div>
         <div class="4u 12u$(medium)">
           <span class="image fit"><img src="images/hs.jpg" alt="high school kids smiling" /></span>
           <h3>After Party</h3>
-          <p>Join us after the tournament at the <a href="https://www.google.com/maps/place/Park+Tavern+Bowling+and+Entertainment/@44.94157,-93.3735346,15z/data=!4m12!1m6!3m5!1s0x0:0x806190826b3a5cd2!2sLouisiana+Oaks+Park!8m2!3d44.94157!4d-93.3735346!3m4!1s0x0:0xebd22dee309a27e0!8m2!3d44.9412816!4d-93.3695653">Park Tavern</a> to celebrate in the spirit of Ultimate Peace. Meet new people, create new bonds of friendship and respect, and see what you have to learn from your peers.</p>
+          <p>Join us after the tournament at the <a target="_self" href="https://www.google.com/maps/place/Park+Tavern+Bowling+and+Entertainment/@44.94157,-93.3735346,15z/data=!4m12!1m6!3m5!1s0x0:0x806190826b3a5cd2!2sLouisiana+Oaks+Park!8m2!3d44.94157!4d-93.3735346!3m4!1s0x0:0xebd22dee309a27e0!8m2!3d44.9412816!4d-93.3695653">Park Tavern</a> to celebrate in the spirit of Ultimate Peace. Meet new people, create new bonds of friendship and respect, and see what you have to learn from your peers.</p>
         </div>
         <div class="4u 12u$(medium)">
           <span class="image fit"><img src="images/highfives.jpg" alt="two teams high fiving after the game"/></span>
@@ -130,7 +130,7 @@
   <!-- Footer -->
   <section id="footer">
     <ul class="icons">
-      <li><a href="https://www.facebook.com/bidforpeace/" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+      <li><a target="_self" href="https://www.facebook.com/bidforpeace/" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
       <li><a href="mailto:bidforpeace@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
     </ul>
     <ul class="copyright">
