remove fundraiser button and rename festival button to details

--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
       <h1><strong>Bid For Peace</strong></h1>
       <p>an ultimate festival and fundraiser<br /> benefitting <a href="http://www.ultimatepeace.org/">Ultimate Peace</a></p>
       <ul class="actions">
-        <li><a href="#festival" class="button scrolly">Festival</a></li>
-        <li><a href="#fundraiser" class="button scrolly">Fundraiser</a></li>
+        <li><a href="#details" class="button scrolly">Details</a></li>
         <li><a href="#donate" class="button scrolly">Donate</a></li>
       </ul>
     </div>
   </section>
 
-  <section id="festival" class="main style1 special">
+  <section id="details" class="main style1 special">
     <div class="container">
       <header class="major">
         <h2>Ultimate Frisbee Festival</h2>
