--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
   <!-- Header -->
   <section id="header">
     <div class="inner">
-      <img src="images/BidForPeaceLogo.svg" alt="bfp logo" />
-      <h1><strong>Bid For Peace</strong></h1>
-      <p>an ultimate festival and fundraiser<br /> benefitting <a href="http://www.ultimatepeace.org/">Ultimate Peace</a></p>
+      <h1><img src="images/bfp_logo_lady.png" alt="Bid For Peace" style="width:400px;"/></h1>
+      <p>an ultimate festival and fundraiser benefitting <a href="http://www.ultimatepeace.org/">Ultimate Peace</a></p>
       <ul class="actions">
         <li><a href="#details" class="button scrolly">Details</a></li>
         <li><a href="#donate" class="button scrolly">Donate</a></li>
