--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- Header -->
   <section id="header">
     <div class="inner">
-      <h1><img src="images/bfp_logo_lady.png" alt="Bid For Peace" style="width:400px;"/></h1>
+      <img src="images/bfp_logo_lady.png" alt="Bid For Peace" style="width:400px;"/>
       <p>an ultimate festival and fundraiser benefitting <a href="http://www.ultimatepeace.org/">Ultimate Peace</a></p>
       <ul class="actions">
         <li><a href="#details" class="button scrolly">Details</a></li>
