--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <header class="major">
         <h2>Ultimate Frisbee Festival</h2>
       </header>
-	    <p>Bid for Peace 2017 is here! <a href="https://www.eventbrite.com/e/bid-for-peace-hat-tournament-tickets-34769453371">Register</a> by July 6 to garuntee jersey size.</p>
+	    <p>Bid for Peace 2017 is here! <a href="https://www.eventbrite.com/e/bid-for-peace-hat-tournament-tickets-34769453371">Register</a> by July 6 to guarantee jersey size.</p>
       <div class="row 150%">
         <div class="4u 12u$(medium)">
           <span class="image fit"><img src="images/melissa.jpg" alt="Melissa cathing a disc" /></span>
